Для твика с добавлением "Инженерного меню"
Эти строки добавляются для патча:

    <string name="em_settings_title">Инженерное меню</string>
    <string name="em_settings_adb_title">Тонкая настройка параметров телефона</string>

--- a/Russian/main/Settings.apk/res/values-ru/strings.xml
+++ b/Russian/main/Settings.apk/res/values-ru/strings.xml
@@ -2972,4 +2972,6 @@
     <string name="flip_2_mute_summary">Доступ к дополнительным настройкам</string>
     <string name="level">G-сенсор</string>
     <string name="level_summary">Калибровка G-сенсора/акселерометра</string>
+    <string name="em_settings_title">Инженерное меню</string>
+    <string name="em_settings_adb_title">Тонкая настройка параметров телефона</string>
 </resources>
