--- a/Russian/main/MeikaCam.apk/res/values-ru/strings.xml
+++ b/Russian/main/MeikaCam.apk/res/values-ru/strings.xml
@@ -10,9 +10,9 @@
     <string name="ids_touch_shot_off">Click Capture mode is turned off</string>
     <string name="ids_slience_shot_on">Mute may not work on some models oh ~</string>
     <string name="ids_slience_shot_off">Closed mute pictures</string>
-    <string name="ids_btn_shot_mode_smart">Smart</string>
-    <string name="ids_btn_shot_mode_auto">Normal</string>
-    <string name="ids_btn_shot_mode_timer">Delay</string>
+    <string name="ids_btn_shot_mode_smart">Умный</string>
+    <string name="ids_btn_shot_mode_auto">Нормальный</string>
+    <string name="ids_btn_shot_mode_timer">Задержка</string>
     <string name="ids_timer_1s">1 сек.</string>
     <string name="ids_timer_2s">2 сек.</string>
     <string name="ids_timer_3s">3 сек.</string>
@@ -118,11 +118,11 @@ third-party program,please restart your phone。"</string>
 
 
 
-    <string name="back">Returns</string>
-    <string name="mainpage">Home</string>
-    <string name="save_share">Save and Share</string>
-    <string name="next">Next</string>
-    <string name="finish">complete</string>
+    <string name="back">Назад</string>
+    <string name="mainpage">Домой</string>
+    <string name="save_share">Сохранить и поделиться</string>
+    <string name="next">Далее</string>
+    <string name="finish">Завершено</string>
     <string name="beautytitle">magic beauty</string>
     <string name="beautyskin">skin</string>
     <string name="beautyface">suyan</string>
@@ -140,26 +140,26 @@ third-party program,please restart your phone。"</string>
     <string name="nose">Nose</string>
     <string name="mouth">Mouth</string>
     <string name="no_images">Не удается найти фото</string>
-    <string name="loading">Loading…</string>
+    <string name="loading">Загрузка…</string>
     <string name="attentioning">Обработка...</string>
     <string name="processing_beauty">Being beauty…</string>
     <string name="processing">Putting on make-up…</string>
-    <string name="onprocessing">Processing…</string>
-    <string name="select_photos">select photos</string>
-    <string name="wait_scanning">Scanning SD card ...</string>
-    <string name="not_enough_space">SD card is full.</string>
-    <string name="camera_images">Camera</string>
-    <string name="place_unknown">unknown location</string>
-    <string name="setting">Settings</string>
-    <string name="setting_home">Home</string>
-    <string name="setting_feedback">comments and suggestions</string>
-    <string name="setting_about">About Us</string>
+    <string name="onprocessing">Обработка…</string>
+    <string name="select_photos">Выбор фотографий</string>
+    <string name="wait_scanning">Сканирование SD-карты...</string>
+    <string name="not_enough_space">SD-карта переполнена</string>
+    <string name="camera_images">Камера</string>
+    <string name="place_unknown">Неизв.местоположение</string>
+    <string name="setting">Настройки</string>
+    <string name="setting_home">Домой</string>
+    <string name="setting_feedback">Комментарии и предложения</string>
+    <string name="setting_about">О приложении</string>
     <string name="setting_recommend">Tell a friend</string>
     <string name="setting_weibo">official microblogging:</string>
     <string name="setting_weixin">micro-channel public platform</string>
     <string name="setting_offical">\@camera</string>
-    <string name="setting_save">Auto Save Original</string>
-    <string name="setting_camera_fix">Camera Calibration</string>
+    <string name="setting_save">Автосохранение оригинала</string>
+    <string name="setting_camera_fix">Калибровка камеры</string>
     <string name="setting_direct_to_camera">directly into the self-timer after a beautiful start</string>
     <string name="camera_fix_title">your camera direction needed to correct it?</string>
     <string name="camera_fix_content1">your camera viewfinder camera orientation may be incorrect</string>
